<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtOperation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textSize="44sp"
                tools:ignore="NestedWeights"
                tools:text="1" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="viewEnd"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Boton clear-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_operator"
                    android:onClick="clearText"
                    android:text="@string/clear" />

            </LinearLayout>

            <!--Boton 7,8,9 y /-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number7"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_seven"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_eight"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_nine"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_operator"
                    android:onClick="addOperation"
                    android:text="@string/symbol_split"
                    android:textSize="24sp" />

            </LinearLayout>

            <!--Boton 4, 5, 6 y X-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_four"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_five"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_six"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_operator"
                    android:onClick="addOperation"
                    android:text="@string/symbol_multiplication"
                    android:textSize="24sp" />

            </LinearLayout>

            <!--Boton 1, 2, 3 y - -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_one"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_two"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_three"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_operator"
                    android:onClick="addNumber"
                    android:text="@string/symbol_less"
                    android:textSize="24sp" />

            </LinearLayout>

            <!--Boton . 0 = y + -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/symbol_dot"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="addNumber"
                    android:text="@string/number_zero"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/symbol_equal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_operator"
                    android:onClick="addOperation"
                    android:text="@string/symbol_plus"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>